# Drafiti

./: .gitignore  AGENTS.md  package-lock.json  package.json
CI/: color pallete.md
apps/desktop/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
apps/desktop/prompting/: codex-build-profile.v1.json
apps/desktop/scripts/: dev-server.mjs
apps/desktop/src/: App.test.tsx  App.tsx  index.css  promptProfile.ts  reducer.test.ts  reducer.ts  tauri.ts  types.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  main.rs  prompt_profile.rs
apps/desktop/src/components/: ChangeSummaryCard.tsx  CodexHeader.tsx  CodexSidebar.tsx  ComposerBar.tsx  PreviewFooterSummary.tsx  PreviewFrame.test.tsx  PreviewFrame.tsx  PreviewToolbar.tsx  PreviewViewportTabs.tsx  PreviewWorkspace.tsx  SettingsPanel.tsx  ShellLayout.test.tsx  ShellLayout.tsx  TranscriptTimeline.test.tsx  TranscriptTimeline.tsx
docs/: agents.md  linting.md  scope.md
scripts/: common.mjs  desktop-dev.mjs  rust-runner.mjs  workspace-runner.mjs
