[package]
name = "draffiti_desktop"
version = "0.1.0"
description = "Bare-minimum Draffiti desktop shell"
authors = ["Draffiti contributors"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.95.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "draffiti_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tokio = { version = "1.48.0", features = ["sync", "time"] }
rfd = "0.15.4"
uuid = { version = "1.18.1", features = ["v4"] }
windows-sys = { version = "0.61.2", features = ["Win32_Storage_FileSystem", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }
